2010-06-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #XXX: Error: Call to undefined method t3lib_div::calculatechash()
	* Fixed bug #14111: tx_realurl::lookUp_cleanAlias() could be used in user functions but is protected since v1.8.0
	* Released version 1.9.1

2010-06-03  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10124: Outdated entry in tx_realurl_uniqaliase should throw a 404 error
	* Fixed bug #13993: valueMaps: noMatch:bypass removes the parameter from the url
	* Fixed bug #14370: realurl fails on mapping with multidomain conf with different default langs (thanks to Vladimir Podkovanov)
	* Fixed bug #13475: Add possibility to userFuncs to bypass the param as known from valueMap (thanks to Steffen Ritter)
	* Released version 1.9.0

2010-06-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #11219: Incorrect cHash stored when bypassing parameters

2010-06-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12383: Append suffix depending on GETvars
	* Fixed bug #14576: Add a flag to the page to exclude it from RealURL caches
	* Fixed bug #9757: Autoconfig should be rewritten after update to sys_domain
	* Fixed bug #13951: Wrong link when linking to root page on TYPO3 installation inside a subdirectory
	* Fixed bug #13962: Support for all UTF8 characters in URLs

2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14381: 404 Handling throws a 500 error
	* Fixed bug #14414: wrong behavior with Exclude from speaking URL setting (thanks to Vladimir Podkovanov)
	* Fixed bug #12904: Exclude from speaking URL
	* Fixed bug #14111: tx_realurl::lookUp_cleanAlias() could be used in user functions but is protected since v1.8.0
	* Fixed bug #14261: Error Log in BE use wrong DomainName
	* Fixed bug #14266: set as redirect does not work
	* Fixed bug #14552: Path cache is not used in some cases
	* Fixed bug #14200: after logging out from BE realurl stops working on some pages