@@ -1,6 +1,10 @@
 2010-06-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
-	* Fixed bug #XXX: Error: Call to undefined method t3lib_div::calculatechash()
+	* Fixed bug #14617: defaultToHTMLsuffixOnPrev doesn't work anymore
+
+2010-06-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #14616: Error: Call to undefined method t3lib_div::calculatechash()
 	* Fixed bug #14111: tx_realurl::lookUp_cleanAlias() could be used in user functions but is protected since v1.8.0
 	* Released version 1.9.1
 
